# py-api-template

./: .env.sample  compose.yml  nginx.conf  pyproject.toml  readme.adoc
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: branch-rules.yml  deploy_development.yml  deploy_production.yml  docker-prod-deploy.yml
app/chat/: consumers.py
app/common/: filter.py  pagination.py  serializers.py
app/core/: asgi.py  settings.py  storage_backends.py  urls.py
app/logs/: readme.md
app/user/: admin.py  enums.py  managers.py  models.py  tasks.py  utils.py
app/user/migrations/: 0001_initial.py  0002_alter_profile_kyc_level.py  0003_profile_divisional_head_profile_regional_head.py  0004_remove_profile_divisional_head_and_more.py  0005_remove_user_user_type_user_image_alter_user_role_and_more.py  0006_user_middle_name.py  0007_alter_token_token_type.py
app/user/templates/emails/: account_verification_template.html  account_verification_template.txt  new_user_welcome_template.html  new_user_welcome_template.txt
app/user/templates/emails/layout/: footer.html  header.html
app/user/v1/: serializers.py  views.py
app/user/v1/urls/: auth.py  users.py
docker/: Dockerfile
docker/celery/: Dockerfile-celery  entrypoint-celery.sh
docker/dev/: Dockerfile  entrypoint.sh
docker/prod/: Dockerfile  entrypoint.sh
elk-config/kibana/: kibana.yml
